--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
-  background-color: #282c34;
+  background-color: rgb(255, 252, 250);
+  color: #122538;
   min-height: 100vh;
   color: #fff;
 }
@@ -8,6 +9,7 @@
 h1 {
   margin-top: 0;
   padding-top: 2rem;
+  color: #122538;
 }
 
 .calc-body {
@@ -21,15 +23,17 @@ h1 {
   flex-wrap: wrap;
   justify-content: center;
   width: 100%;
+  z-index: 100;
 }
 
 .card {
+  background-color: #aedcf5;
   min-width: 350px;
   width: 40%;
   margin: 1rem 0.5rem 0;
   text-align: center;
-  background-color: #a7aba7;
-  color: #333;
+  background-color: #aedcf5;
+  color: #122538;
   padding-top: 2rem;
   border-radius: 10px;
   border: 1px solid transparent;
@@ -38,7 +42,7 @@ h1 {
 .card input {
   margin: 0.5rem 0;
   padding: 0.25rem;
-  background-color: #e8eaeb;
+  background-color: rgb(255, 252, 250);
   border: 1px solid #333;
   outline: none;
   border-radius: 3px;
@@ -55,7 +59,7 @@ input[type=number] {
 }
 
 input[type=submit] {
-  background-color: rgba(109, 176, 242, 0.5);
+  background-color: rgba(226, 138, 105, 1);
   padding: 0.25rem 0.5rem;
   width: 10rem;
   border-radius: 10px;
@@ -64,16 +68,24 @@ input[type=submit] {
 }
 
 input[type=submit]:focus, input[type=submit]:hover {
-  background-color: rgba(109, 176, 242, 1);
+  background-color: rgba(237, 104, 121, 1)
 }
 
-.error { color: red }
+.error { color: red; }
+
+.overpaid { 
+  color: green;
+  max-width: 30ch;
+  margin: 0 auto;
+ }
 
 label, p { font-weight: 700; }
 
 ul {
   width: 100%;
   padding: 0;
+  overflow-y: scroll;
+  max-height: 200px;
 }
 
 
@@ -88,4 +100,15 @@ li span {
   display: inline-block;
   width: 25%;
   text-align: center;
+}
+
+.money-container {
+  margin-top: -9rem;
+  display: flex;
+  justify-content: center;
+}
+
+.money {
+  z-index: 1;
+  padding-right: 2rem;
 }
